Fix shadow appearing on jumbotron containers instead of just text
Also includes alternate shadow option in case you don't like the look of
big blurry text shadows.

--- a/scss/themes/default/_properties.scss
+++ b/scss/themes/default/_properties.scss
@@ -38,7 +38,7 @@ $gradient-alt: linear-gradient(180deg, rgba($black-alt, .4), rgba($black-alt, 0)
 	box-shadow: inset 0 -0.5rem 1rem rgba(var(--bs-black-rgb), .15);
 }
 
-.jumbotron .container {
+.jumbotron>* {
 	@extend .text-shadow-custom;
 }
 
